[tool.poetry]
name = "project"
version = "0.1.0"
description = "A simple Django project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
gunicorn = "^21.2"
psycopg2 = "^2.9"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.poetry.scripts]
start = "django_project:manage.run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
